[package]
name = "reqwest_script"
version = "0.1.0"
edition = "2024"

[dependencies]
hmac = "0.13.0-pre.5"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
sha2 = "0.11.0-pre.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
hex = "0.4.3"
rust_decimal = "1.37.1"
